# xschr

./: .gitignore  Dockerfile  README.md  environments.yaml  go.mod  pyproject.toml  setup.py  slp_train.py
cmd/dbtest/: main.go
cmd/xschr/: main.go
internal/db/: connection.go  queries.go  schema.go
internal/types/: job.go
xschr/: __main__.py  __version__.py  cli.py  config.py  core.py  cuda_devices.py  engine.py  system.py
